# auction-house-cpp

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: sanity_checks.yml
src/client/: main.cpp
src/server/: auction_service.cpp  auction_service.hpp  cli.cpp  cli.hpp  commands.cpp  commands.hpp  commands_processor.cpp  commands_processor.hpp  main.cpp  notification_service.hpp  shared_state.hpp  sqlite3.cpp  sqlite3.hpp  storage.cpp  storage.hpp  transaction_log.cpp  transaction_log.hpp  types.hpp  user_service.cpp  user_service.hpp
tests/: CMakeLists.txt  commands_tests.cpp  storage_tests.cpp
